@@ -626,9 +626,7 @@ See also variable `wl-use-petname'."
   (with-current-buffer (window-buffer win)
     (when (eq major-mode 'wl-summary-mode)
       (let ((beg (or beg (window-start win)))
-	    (end (condition-case nil
-		     (window-end win t)	; old emacsen doesn't support 2nd arg.
-		   (error (window-end win)))))
+	    (end (wl-window-end win t)))
 	(save-excursion
 	  (goto-char beg)
 	  (while (and (< (point) end) (not (eobp)))
@@ -1911,9 +1909,7 @@ This function is defined for `window-scroll-functions'"
   (with-current-buffer (window-buffer win)
     (when (eq major-mode 'wl-summary-mode)
       (let ((start (window-start win))
-	    (end (condition-case nil
-		     (window-end win t)	; old emacsen doesn't support 2nd arg.
-		   (error (window-end win)))))
+	    (end (wl-window-end win t)))
 	(wl-summary-update-status-marks start end 'check)))))
 
 (defun wl-summary-insert-message (&rest args)
